tests/snapshots/run_wpt_conformance__trtx_hardSwish_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_swish.https.any.js",
    "hardSwish float16 4D tensor",
    "trtx",
    "PASS",
)
